# android_wechat_qrcode

./: README.md  config.gradle  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/android/wechat/qrcode/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/android/wechat/qrcode/demo/: BoxView.java  CameraActivity.java  CameraProvider.java  ImageActivity.java  MainActivity.java
app/src/main/res/layout/: activity_camera.xml  activity_image.xml  activity_main.xml
app/src/main/res/menu/: menu_camera.xml  menu_image.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/android/wechat/qrcode/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
wechat_qrcode/: build.gradle  consumer-rules.pro
wechat_qrcode/src/main/: AndroidManifest.xml
wechat_qrcode/src/main/cpp/: CMakeLists.txt  wechat_qr.cpp  wechat_qr.h  wechat_qr_native.cpp
wechat_qrcode/src/main/java/android/wechat/qrcode/: QRResolver.java
